<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.NewCourseActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:hint="@string/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_title"
            app:startIconDrawable="@drawable/ic_baseline_assignment_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_name"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:hint="Code"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textField"
            app:startIconDrawable="@drawable/ic_baseline_person_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_code"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:hint="@string/description"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textField2"
            app:startIconDrawable="@drawable/ic_baseline_message_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_description"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:inputType="textMultiLine" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField4"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:hint="@string/duration"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textField3"
            app:startIconDrawable="@drawable/ic_baseline_duration_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_duration"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField23"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/fee"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textField4"
            app:startIconDrawable="@drawable/ic_baseline_duration_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_fee"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <EditText
            android:id="@+id/text_start_date"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:focusable="false"
            android:hint="@string/start_date"
            android:inputType="none"
            app:layout_constraintEnd_toStartOf="@+id/btn_start_date"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textField23"
            app:startIconDrawable="@drawable/ic_baseline_calendar_today_24"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/text_end_date"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/end_date"
            android:inputType="none"
            android:clickable="true"
            android:focusable="false"
            app:layout_constraintEnd_toStartOf="@+id/btn_end_date"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_start_date"
            tools:ignore="TextFields" />

        <ca.antonious.materialdaypicker.MaterialDayPicker
            android:id="@+id/day_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField7"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:hint="@string/start_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/day_picker"
            app:startIconDrawable="@drawable/ic_baseline_timer_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_day_start_time"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:inputType="time" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField8"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:hint="@string/end_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textField7"
            app:startIconDrawable="@drawable/ic_baseline_timer_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_day_end_time"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:inputType="time" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_create"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="32dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/create_course"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textField8"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:fontFamily="sans-serif-black"
            android:text="Create New Course"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Days"
            app:layout_constraintStart_toStartOf="@+id/day_picker"
            app:layout_constraintTop_toBottomOf="@+id/text_end_date" />

        <ImageButton
            android:id="@+id/btn_start_date"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintBottom_toBottomOf="@+id/text_start_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_start_date"
            app:srcCompat="@drawable/ic_baseline_duration_24"
            tools:ignore="VectorDrawableCompat" />

        <ImageButton
            android:id="@+id/btn_end_date"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintBottom_toBottomOf="@+id/text_end_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_end_date"
            app:srcCompat="@drawable/ic_baseline_duration_24"
            tools:ignore="VectorDrawableCompat" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>